feat(transition page) Add navigation auto for use transition API

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,10 @@ import Header from '../components/header.astro';
 </Layout>
 
 <style>
+	@view-transition {
+	  navigation: auto; /* enabled! */
+	}
+	
 	main {
 		margin: auto;
 		padding: 1rem;
