feat( project page ) Create PAge

--- a/src/pages/projets.astro
+++ b/src/pages/projets.astro
@@ -5,7 +5,7 @@ import Header from '../components/header.astro';
 
 <LayoutPage title="Mathieu Chavanel.B - Potfolio">
 	<Header title={["Accueil", "Projets", "Labs", "Contact"]} href={["/", "/projets", "/#labs", "/#contact"]}></Header>
-    <h1>Welcome to Home</h1>
+    <h1>Welcome to Projets</h1>
 </LayoutPage>
 
 <style>
