--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,7 +7,7 @@ interface Props {
 const { href, title } = Astro.props;
 ---
 
-<ul class=" bg-slate-50 flex justify-around">
+<ul class=" bg-teal-200 flex justify-around w-1/3 rounded-lg mx-auto">
 	{title.map((item, index) => (
         <a href={href[index]} class="  m-4 ">{item}</a>
     ))}
