--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,21 +4,22 @@ interface Props {
 	description: string;
 	href: string;
 	thumbnail: string;
-	techno : [];
+	techno : object[];
 }
 
 const { href, title, description, thumbnail, techno } = Astro.props;
+// console.log(JSON.parse( JSON.stringify(techno[0])).img )
+// {techno.map((element : any) => {
+// 		console.log(element.name )
+// 		})}
 ---
 
 <a href={href}>
 	<img src={thumbnail} alt="">
 	<h2>{title}</h2>
 	<p>{description}</p>
-	<ul>
-		{techno.map((element) => {
-			<li>
-				<img src={element.img} />
-			</li>
-		})}
-	</ul>
+	{techno.map((element) => {
+		<p>{element}</p>
+		<h1>{element}</h1>
+	})}
 </a >
