--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,12 @@ import Button from '../components/Button.astro';
 import Card from '../components/Card.astro';
 
 const cards = [
-	{ title: "3D Printer", body: "yay" ,href: "", techno: [{img : "path"}]},
+	{ title: "3D Printer", body: "yay" ,href: "", 
+		techno: [
+			{"img" : "path", "name" : "toto"},
+			{"img" : "path", "name" : "tutu"}
+		]
+	},
 	// { title: "2D Printer", body: "yey" ,href: "" },
 	// { title: "1D Printer", body: "null" ,href: "" }
 ]
@@ -31,7 +36,7 @@ const cards = [
 	</div>
 
 	<div id="projectHighlight">
-		{cards.map((currentCard) => (
+		{cards.map(currentCard => (
 			<Card title={currentCard.title} description={currentCard.body} href={currentCard.href} thumbnail='' techno={currentCard.techno}></Card>
 		))}
 	</div>
