--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import LayoutPage from '../layouts/page.astro';
 import Header from '../components/header.astro';
 import Button from '../components/Button.astro';
-import Card from '../components/Card.astro';
+import Card from '../components/Card.svelte';
 
 const cards = [
 	{ title: "3D Printer", body: "yay" ,href: "", 
