--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,12 +14,11 @@ const cards = [
 	// { title: "2D Printer", body: "yey" ,href: "" },
 	// { title: "1D Printer", body: "null" ,href: "" }
 ]
-
+import * as myPost from 'content/projets/3d printer.mdx';
 ---
 
 <LayoutPage title="Mathieu Chavanel.B - Potfolio">
 	<Header title={["Accueil", "Projets", "Labs", "Contact"]} href={["/", "/projets", "/#labs", "/#contact"]}></Header>
-    
 	<div id="home" class=" ">
 
 		<div>
