--- a/src/layouts/projectLayout.astro
+++ b/src/layouts/projectLayout.astro
@@ -1,13 +1,24 @@
 ---
-const { frontmatter } = Astro.props;
+interface Props {
+	title: string;
+	props: any
+}
+
+const { title, props } = Astro.props;
 ---
 
-
-<div>
-    <!-- ... -->
-    <h1>test</h1>
-    <p>{frontmatter.description}</p>
-    <slot /> <!-- Markdown content is injected here -->
-    <!-- ... -->
-</div>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="description" content="Astro description" />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="generator" content={Astro.generator} />
+		<title>{title}</title>
+	</head>
+	<body>
+		<slot />
+	</body>
+</html>
 
