--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -18,3 +18,9 @@ import ProjectLayout from '../layouts/projectLayout.astro'
   <Content />
 </ProjectLayout>
 
+
+<style is:global>
+  h1{
+    color: red;
+  }
+</style>
