--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,9 +7,9 @@ interface Props {
 const { href, title } = Astro.props;
 ---
 
-<ul class=" bg-teal-200 flex justify-around w-1/3 rounded-lg mx-auto">
+<ul class=" absolute inset-x-0 top-0 global-color flex justify-around w-1/4 rounded-3xl mx-auto my-5 typo-rubik font-semibold text-xl">
 	{title.map((item, index) => (
-        <a href={href[index]} class="  m-4 ">{item}</a>
+        <a href={href[index]} class="  m-4">{item}</a>
     ))}
 </ul>
 
