--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,12 +24,12 @@ const cards = [
 	<Header title={["Accueil", "Projets", "Contact"]} href={["/", "/projets", "/#contact"]}></Header>
 	<div id="home" class=" flex w-full h-screen typo-rubik">
 
-		<div class="  absolute left-[10%] top-[30%]">
+		<div class="  absolute left-[10%] top-[30%] flex flex-col">
 			<h1 class="text-7xl font-semibold ">Mathieu Chavanel</h1>
-			<h2 class="text-5xl ">Developpeur Creatif</h2>
-			<p class="text-2xl ">Description</p>
+			<h2 class="text-5xl font-light">Developpeur Creatif</h2>
+			<p class="text-2xl font-thin">Description</p>
 		</div>
-		
+
 		<img src="/images/profile.png" alt="image profile" class=" w-[30%] absolute right-[10%] top-[10%]">
 
 		<div class="bg-[#BCFFF7]  absolute right-[12%] top-[67%] rounded-[10px] -rotate-[5deg]">
@@ -37,7 +37,9 @@ const cards = [
 		</div>
 
 		<!-- <a href="" class=" absolute bottom-[10%] left-1/2">arrow</a> -->
-		<Arrow client:only="svelte" class:list={["absolute bottom-[10%] left-1/2"]}/>
+		 <div class="absolute -bottom-[10%] left-0 w-full flex justify-center">
+			<Arrow client:only="svelte"/>
+		 </div>
 	</div>
 
 	<div id="projectHighlight">
