--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,20 +11,22 @@ import Arrow from '../components/Arrow.svelte'
 const cards = [
 	{ title: "3D Printer", body: "yay" ,href: "", thumbnail : "/images/toto.png",
 		techno: [
-			{"img" : "pathlol", "name" : "toto"},
-			{"img" : "path", "name" : "tutu"}
+			{"img" : "/images/profile.png"},
+			{"img" : "/images/profile.png"}
 		]
 	},
 	{ title: "3D Printer", body: "yay" ,href: "", thumbnail : "/images/toto.png",
 		techno: [
-			{"img" : "pathlol", "name" : "toto"},
-			{"img" : "path", "name" : "tutu"}
+			{"img" : "/images/profile.png"},
+			{"img" : "/images/profile.png"},
+			{"img" : "/images/profile.png"}
 		]
 	},
 	{ title: "3D Printer", body: "yay" ,href: "", thumbnail : "/images/toto.png",
 		techno: [
-			{"img" : "pathlol", "name" : "toto"},
-			{"img" : "path", "name" : "tutu"}
+			{"img" : "/images/profile.png"},
+			{"img" : "/images/profile.png"},
+			{"img" : "/images/profile.png"}
 		]
 	},
 	// { title: "2D Printer", body: "yey" ,href: "" },
