--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,13 +61,41 @@ const cards = [
 		</div>
 	</div>
 
+	<h1 class=" w-full my-[5%] font-black text-6xl text-center">Projets à la une !</h1>
+	
 	<div id="projectHighlight" class="overflow-visible flex w-full h-screen typo-rubik flex-wrap justify-around">
+		
 		{cards.map(currentCard => (
 			<Card title={currentCard.title} description={currentCard.body} href={currentCard.href} thumbnail={currentCard.thumbnail} techno={currentCard.techno}></Card>
 		))}
 	</div>
+
+	<h1 class=" w-full my-[5%] font-black text-6xl text-center">Contact</h1>
 	
-	<div id="contact">
+	<div id="contact" class="overflow-visible w-full h-screen typo-rubik relative">
+
+		<div class=" w-[40%] ml-[40%] h-full flex flex-col justify-center overflow-visible">
+			
+			<a href="https://github.com/math-pixel" class=" flex">
+				<img alt="icon de github" src="/images/github icon.png" class=" w-[20%]">
+				<h1 class=" m-6 my-auto font-bold text-5xl text-center">GitHub</h1>
+			</a>
+
+			<a href="mailto:mathcb74@gmail.com" class=" flex">
+				<img alt="icon de mail" src="/images/mail icon.png" class=" w-[20%]">
+				<h1 class=" m-6  my-auto font-bold text-5xl text-center">Mail</h1>
+			</a>
+
+			<a href="https://www.linkedin.com/in/mathieu-chavanel-50488b251/" class=" flex">
+				<img alt="icon de linkedin" src="/images/linkedin icon.png" class=" w-[20%]">
+				<h1 class=" m-6  my-auto font-bold text-5xl text-center">Linkedin</h1>
+			</a>
+
+		</div>
+
+		<img src="/images/toto.png" alt="" class="w-[20%] absolute top-[2%] left-[8%] rounded-xl">
+		<img src="/images/toto.png" alt="" class="w-[20%] absolute bottom-[2%] right-[8%] rounded-xl">
+
 	</div>
 
 </LayoutPage>
