--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ const cards = [
 		techno: [
 			{"img" : "/images/profile.png"},
 			{"img" : "/images/profile.png"},
+			{"img" : "/images/profile.png"},
 			{"img" : "/images/profile.png"}
 		]
 	},
@@ -34,14 +35,14 @@ const cards = [
 ]
 ---
 
-<LayoutPage title="test">
-	<Header title={["Accueil", "Projets", "Contact"]} href={["/", "/projets", "/#contact"]}></Header>
+<LayoutPage title="Mathieu Chavanel - Portfolio">
+	<Header title={["Accueil", "Projets", "Contact"]} href={["/", "/#projectHighlight", "/#contact"]}></Header>
 	<div id="home" class=" flex w-full h-screen typo-rubik">
 
 		<div class="  absolute left-[10%] top-[30%] flex flex-col">
 			<h1 class="text-7xl font-semibold ">Mathieu Chavanel</h1>
 			<h2 class="text-5xl font-light">Developpeur Creatif</h2>
-			<p class="text-2xl font-thin">Description</p>
+			<p class="text-2xl font-thin mt-8">Description</p>
 		</div>
 
 		
@@ -49,9 +50,9 @@ const cards = [
 		<!-- <a href="" class=" absolute bottom-[10%] left-1/2">arrow</a> -->
 		<div class="absolute right-[10%] top-[20%] overflow-visible">
 
-			<img src="/images/profile.png" alt="image profile" class="">
+			<img src="/images/avatar.png" alt="image profile" class="">
 
-			<div class="bg-[#BCFFF7] absolute left-[0%] top-[80%] rounded-[10px] -rotate-[5deg]">
+			<div class="bg-[#BCFFF7] absolute -left-[10%] top-[85%] rounded-[10px] -rotate-[7deg]">
 				<p class="font-normal text-[30px] py-[8px] px-[16px] whitespace-nowrap">A la recherche d'une alternance</p>
 			</div>
 		</div>
@@ -78,23 +79,23 @@ const cards = [
 			
 			<a href="https://github.com/math-pixel" class=" flex">
 				<img alt="icon de github" src="/images/github icon.png" class=" w-[20%]">
-				<h1 class=" m-6 my-auto font-bold text-5xl text-center">GitHub</h1>
+				<h1 class=" m-6 my-auto font-medium text-5xl text-center">GitHub</h1>
 			</a>
 
 			<a href="mailto:mathcb74@gmail.com" class=" flex">
 				<img alt="icon de mail" src="/images/mail icon.png" class=" w-[20%]">
-				<h1 class=" m-6  my-auto font-bold text-5xl text-center">Mail</h1>
+				<h1 class=" m-6  my-auto font-medium text-5xl text-center">Mail</h1>
 			</a>
 
 			<a href="https://www.linkedin.com/in/mathieu-chavanel-50488b251/" class=" flex">
 				<img alt="icon de linkedin" src="/images/linkedin icon.png" class=" w-[20%]">
-				<h1 class=" m-6  my-auto font-bold text-5xl text-center">Linkedin</h1>
+				<h1 class=" m-6  my-auto font-medium text-5xl text-center">Linkedin</h1>
 			</a>
 
 		</div>
 
-		<img src="/images/toto.png" alt="" class="w-[20%] absolute top-[2%] left-[8%] rounded-xl">
-		<img src="/images/toto.png" alt="" class="w-[20%] absolute bottom-[2%] right-[8%] rounded-xl">
+		<img src="/images/toto.png" alt="" class="w-[20%] absolute top-[2%] left-[8%] rounded-[16px]">
+		<img src="/images/toto.png" alt="" class="w-[20%] absolute bottom-[2%] right-[8%] rounded-[16px]">
 
 	</div>
 
