--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,9 +42,14 @@ const cards = [
 		<div class="  absolute left-[10%] top-[30%] flex flex-col">
 			<h1 class="text-7xl font-semibold ">Mathieu Chavanel</h1>
 			<h2 class="text-5xl font-light">Developpeur Creatif</h2>
-			<p class="text-2xl font-thin mt-8">Description</p>
+			<p class="text-2xl font-thin mt-8 max-w-[60%]">
+				Salut ! Je suis un développeur passionné et curieux sur le monde qui m'entoure. J'adore me lancer des nouveaux défis & apprendre de nouvelle compétences !
+				Et quand je ne code pas, vous me trouverez probablement en train de faire du sport ou de bricoler sur un projet.
+				<br>
+				<br>
+				Pour me résumer en 3 mots : Curieux, Manuel, Persévérant
+			</p>
 		</div>
-
 		
 		
 		<!-- <a href="" class=" absolute bottom-[10%] left-1/2">arrow</a> -->
