Refactor : update portfolio style

--- a/src/pages/projets.astro
+++ b/src/pages/projets.astro
@@ -1,6 +1,6 @@
 ---
 import LayoutPage from '../layouts/page.astro';
-import Header from '../components/header.astro';
+import Header from '../components/Header.vue';
 ---
 
 <LayoutPage title="Mathieu Chavanel.B - Potfolio">
