--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,16 @@
 import LayoutPage from '../layouts/page.astro';
 import LayoutProject from '../layouts/projectLayout.astro';
 
-import Header from '../components/header.astro';
+import Header from '../components/Header.vue';
+import Contact from '../components/Contact.vue';
 import Button from '../components/Button.astro';
-import Card from '../components/Card.svelte';
+import Card from '../components/Card.vue';
 
 import Arrow from '../components/Arrow.svelte'
 
 import CursorFollower from '../components/CursorFollower.svelte'
+import Hero from '../components/Hero.vue';
+import Projects from '../components/Projects.vue';
 
 const cards = [
 	{ title: "Arcania", body: "Dans Arcania transformer votre telephone en veritable baguette magique et combattez vos amies dans l'arene" ,href: "https://github.com/math-pixel/ARCANIA", thumbnail : "/images/masarus.png",
@@ -46,75 +49,14 @@ const cards = [
 
 <LayoutPage title="Mathieu Chavanel - Portfolio">
 	<CursorFollower client:load></CursorFollower>
-	<Header title={["Accueil", "Projets", "Contact"]} href={["/", "/#projectHighlight", "/#contact"]}></Header>
-	<div id="home" class=" flex w-full h-screen ">
-
-		<div class="  absolute left-[5%] top-[30%] flex flex-col overflow-visible">
-			<h1 class="text-7xl font-semibold ">Mathieu Chavanel</h1>
-			<h2 class="text-5xl font-light">Developpeur Creatif</h2>
-			<p class="text-2xl font-thin mt-8 max-w-[68%]">
-				Salut ! Je suis un développeur passionné et surtout curieux sur le monde qui nous entoure. 
-				<br>J'adore me lancer des nouveaux défis et apprendre de nouvelle compétences !
-				<br>Et quand je ne code pas, vous me trouverez probablement en train de faire du sport, de bricoler ou de jouer au dernier jeu vidéo !
-				<br>
-				<br>
-				Pour me résumer en 3 mots : <mark class=" bg-[#FFF8D6] px-[10px] py-[4px] rounded-lg "><b>Curieux</b></mark> <mark class=" bg-[#E3FFD6] px-[10px] py-[4px] rounded-lg "><b>Manuel</b></mark> <mark class=" bg-[#F4D6FF] px-[10px] py-[4px] rounded-lg "><b>Persévérant</b></mark>
-			</p>
-		</div>
-		
-		
-		<!-- <a href="" class=" absolute bottom-[10%] left-1/2">arrow</a> -->
-		<div class="absolute right-[5%] top-[20%] overflow-visible">
-
-			<img src="/images/avatar.png" alt="image profile" class=" w-[450px]">
-
-			<div class="bg-[#BCFFF7] absolute left-[5%] top-[80%] rounded-[10px] -rotate-[7deg] ">
-				<p class="font-normal text-[30px] py-[8px] px-[16px] whitespace-nowrap">A la recherche d'une alternance</p>
-			</div>
-		</div>
-
-		<div class="absolute -bottom-[10%] left-0 w-full flex justify-center">
-			<Arrow client:only="svelte"/>
-		</div>
+	<Header></Header>
+	<div class="bg-gradient-to-br from-purple-800 to-indigo-900">
+		<Hero></Hero>
+		<Projects></Projects>
+		<Contact></Contact>
 	</div>
 
-	<h1 id="projectHighlight" class=" w-full my-[5%] font-black text-6xl text-center">Projets à la une !</h1>
 	
-	<div class="overflow-visible flex w-full h-screen  flex-wrap justify-around">
-		
-		{cards.map(currentCard => (
-			<Card title={currentCard.title} description={currentCard.body} href={currentCard.href} thumbnail={currentCard.thumbnail} techno={currentCard.techno}></Card>
-		))}
-	</div>
-
-	<h1 class=" w-full my-[5%] font-black text-6xl text-center">Contact</h1>
-	
-	<div id="contact" class="overflow-visible w-full h-screen  relative">
-
-		<div class=" w-[40%] ml-[40%] h-full flex flex-col justify-center overflow-visible">
-			
-			<a href="https://github.com/math-pixel" class=" flex">
-				<img alt="icon de github" src="/images/github icon.png" class=" w-[20%]">
-				<h1 class=" m-6 my-auto font-medium text-5xl text-center">GitHub</h1>
-			</a>
-
-			<a href="mailto:mathcb74@gmail.com" class=" flex">
-				<img alt="icon de mail" src="/images/mail icon.png" class=" w-[20%]">
-				<h1 class=" m-6  my-auto font-medium text-5xl text-center">Mail</h1>
-			</a>
-
-			<a href="https://www.linkedin.com/in/mathieu-chavanel-50488b251/" class=" flex">
-				<img alt="icon de linkedin" src="/images/linkedin icon.png" class=" w-[20%]">
-				<h1 class=" m-6  my-auto font-medium text-5xl text-center">Linkedin</h1>
-			</a>
-
-		</div>
-
-		<img src="/images/toto.png" alt="" class="w-[20%] absolute top-[2%] left-[8%] rounded-[16px]">
-		<img src="/images/photographie.png" alt="" class="w-[20%] absolute bottom-[2%] right-[8%] rounded-[16px]">
-
-	</div>
-
 </LayoutPage>
 
 <style is:global>
