Feat : add mdx support

--- a/src/pages/projets.astro
+++ b/src/pages/projets.astro
@@ -4,8 +4,10 @@ import Header from '../components/Header.vue';
 ---
 
 <LayoutPage title="Mathieu Chavanel.B - Potfolio">
-	<Header title={["Accueil", "Projets", "Labs", "Contact"]} href={["/", "/projets", "/#labs", "/#contact"]}></Header>
-    <h1>Welcome to Projets</h1>
+	<Header></Header>
+	<div class="pt-16 min-h-screen bg-gradient-to-br from-purple-800 to-indigo-900">
+		<h1>Welcome to Projets</h1>
+	</div>
 </LayoutPage>
 
 <style>
