--- a/src/layouts/projectLayout.astro
+++ b/src/layouts/projectLayout.astro
@@ -4,7 +4,9 @@ interface Props {
 	props: any
 }
 
-const { title, props } = Astro.props;
+const { title, props  } = Astro.props;
+
+import LeftNavigation from '../components/projects/LeftNavigation.vue';
 ---
 
 <!doctype html>
