--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -6,10 +6,25 @@ interface Props {
 
 const { href, title } = Astro.props;
 ---
-
-<ul class=" sticky inset-x-0 top-4 z-50 global-color flex justify-around w-1/3 rounded-full mx-auto my-5 text-2xl drop-shadow-sm">
+<!-- sticky inset-x-0 top-4 z-50 global-color flex justify-around w-1/3 rounded-full mx-auto my-5 text-2xl drop-shadow-sm -->
+<ul  
+	id="main-header"
+	class=" duration-500 sticky inset-x-0 top-4 z-50 flex justify-around w-1/3 rounded-full mx-auto my-5 text-2xl drop-shadow-sm"
+	>
 	{title.map((item, index) => (
         <a href={href[index]} class=" m-4 font-medium hover:text-hover">{item}</a>
     ))}
 </ul>
+
+<script>
+	let header:any = document.getElementById('main-header');
+	
+	window.addEventListener('scroll', () => {
+	  if (window.scrollY > 50) {
+		header.classList.add("global-color");
+	  } else {
+		header.classList.remove("global-color");
+	}
+	});
+  </script>
 
