open projetc in new tab and upadate github link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,13 +35,13 @@ const cards = [
 			{"img" : "/images/languages/tool.png"},
 		]
 	},
-	{ title: "Reveil Intelligent", body: "Allo Jarvis ? Reveil 8H demain ! Un reveil fabriquer en python booster a l'ia et structure grace a de la POO " ,href: "", thumbnail : "/images/clock.png",
+	{ title: "Reveil Intelligent", body: "Allo Jarvis ? Reveil 8H demain ! Un reveil fabriquer en python booster a l'ia et structure grace a de la POO " ,href: "https://github.com/IlanOu/Reveil", thumbnail : "/images/clock.png",
 		techno: [
 			{"img" : "/images/languages/rpi.png"},
 			{"img" : "/images/languages/python.png"},
 			{"img" : "/images/languages/ia.png"}
 		]
-	},{ title: "Photo Party", body: "Cheeez ! Photo Party est une application de soiree pour partager ses photos \n Le principe est simple. Tu prend une photos sur ton telephone via une app web puis tu admires ta photos et celle de tes amis sur le video projecteur de la soiree ! " ,href: "", thumbnail : "/images/photo party.png",
+	},{ title: "Photo Party", body: "Cheeez ! Photo Party est une application de soiree pour partager ses photos \n Le principe est simple. Tu prend une photos sur ton telephone via une app web puis tu admires ta photos et celle de tes amis sur le video projecteur de la soiree ! " ,href: "https://github.com/math-pixel/Photo-Party", thumbnail : "/images/photo party.png",
 		techno: [
 			{"img" : "/images/languages/html.png"},
 			{"img" : "/images/languages/nodejs.png"},
@@ -49,8 +49,6 @@ const cards = [
 			{"img" : "/images/languages/sql.svg"},
 		]
 	}
-	// { title: "2D Printer", body: "yey" ,href: "" },
-	// { title: "1D Printer", body: "null" ,href: "" }
 ]
 ---
 <LayoutPage title="Mathieu Chavanel - Portfolio" >
