--- a/src/layouts/page.astro
+++ b/src/layouts/page.astro
@@ -10,7 +10,10 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta property="og:title" content="Portfolio - Mathieu Chavanel Bogniaux">
+		<meta property="og:description" content="Exploront les limites du possible dans le monde numérique !">
+		<meta property="og:image" content="/images/prof.png">
+		<meta property="og:type" content="website">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
