--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -18,6 +18,12 @@ const { href, title } = Astro.props;
 
 <script>
 	let header:any = document.getElementById('main-header');
+
+	if (window.scrollY > 50) {
+		header.classList.add("global-color");
+	  } else {
+		header.classList.remove("global-color");
+	}
 	
 	window.addEventListener('scroll', () => {
 	  if (window.scrollY > 50) {
